optimize, reduce interpreter recursion